--- a/ClimateFirst/Base.lproj/Main.storyboard
+++ b/ClimateFirst/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <rect key="frame" x="173" y="730" width="76" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.14117647059999999" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                 <state key="normal" title="Done">
                                     <color key="titleColor" red="0.77647058820000003" green="0.86274509799999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
@@ -210,10 +210,6 @@
                                 <rect key="frame" x="71" y="38" width="272" height="139"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="9e81a5ecfd915dd0e4727f3c62c9d059" translatesAutoresizingMaskIntoConstraints="NO" id="JVT-IR-Dlb">
-                                <rect key="frame" x="80" y="255" width="255" height="259"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome to Climate First!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="br3-er-NOr">
                                 <rect key="frame" x="20" y="157" width="377" height="43"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -221,6 +217,10 @@
                                 <color key="textColor" red="0.76626521349999999" green="0.86029666660000004" blue="0.79623752830000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cde179e8f7f048aabd9edde13ead2607" translatesAutoresizingMaskIntoConstraints="NO" id="JVT-IR-Dlb">
+                                <rect key="frame" x="71" y="220" width="265" height="301"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.039215686274509803" green="0.12941176470588234" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -934,7 +934,7 @@
                                     <color key="titleColor" red="0.77647058820000003" green="0.86274509799999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="1Wf-tN-hUm" kind="presentation" modalPresentationStyle="fullScreen" id="IF9-cg-5Bi"/>
+                                    <segue destination="1Wf-tN-hUm" kind="presentation" modalPresentationStyle="fullScreen" id="pgZ-4r-V1v"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZEE-Yb-aIn">
@@ -946,7 +946,7 @@
                                     <color key="titleColor" red="0.77647058820000003" green="0.86274509799999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="sks-5k-T7u" kind="presentation" modalPresentationStyle="fullScreen" id="UPa-Kk-CDe"/>
+                                    <segue destination="sks-5k-T7u" kind="presentation" modalPresentationStyle="fullScreen" id="WV3-vn-eeP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bH6-Ir-cUT">
@@ -958,7 +958,7 @@
                                     <color key="titleColor" red="0.77647058820000003" green="0.86274509799999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="dyU-ak-WG2" kind="presentation" modalPresentationStyle="fullScreen" id="Gvn-xI-aN5"/>
+                                    <segue destination="dyU-ak-WG2" kind="presentation" modalPresentationStyle="fullScreen" id="X7O-aO-G3m"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Climate Change Basics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2N-Qh-Vc8">
@@ -977,7 +977,7 @@
                                     <color key="titleColor" red="0.77647058820000003" green="0.86274509799999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="laS-X1-GYc" kind="presentation" modalPresentationStyle="fullScreen" id="ikY-8v-3xV"/>
+                                    <segue destination="laS-X1-GYc" kind="presentation" modalPresentationStyle="fullScreen" id="kqR-Nl-RRl"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What is Climate Change?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ax1-vP-D7B">
@@ -991,7 +991,7 @@
                                 <rect key="frame" x="39" y="270" width="337" height="230"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.77647058820000003" green="0.86274509799999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <string key="text">Climate change is a long-term change in the average weather patterns. Climate change affects many different aspects of our environment, including oil pipelines, water conservation, deforestation, and rising sea levels. The links below will provide you with more info!</string>
+                                <string key="text">Climate change is a long-term change in the average weather patterns. Climate change affects many different aspects of our environment, and has many factors, including oil pipelines, water conservation, deforestation, and rising sea levels. The links below will provide you with more info!</string>
                                 <color key="textColor" red="0.070588235289999995" green="0.14901960780000001" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1016,16 +1016,17 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="X7O-aO-G3m"/>
         <segue reference="dfX-R1-Lds"/>
-        <segue reference="ikY-8v-3xV"/>
-        <segue reference="r0C-Wp-Ns9"/>
+        <segue reference="kqR-Nl-RRl"/>
+        <segue reference="Ot5-vw-wt1"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="2e1ax_vintage_entry_Rising-Seas-blog" width="600" height="266"/>
-        <image name="9e81a5ecfd915dd0e4727f3c62c9d059" width="564" height="868"/>
         <image name="NY2140" width="1000" height="1612"/>
         <image name="arrowshape.turn.up.backward" catalog="system" width="128" height="106"/>
         <image name="california-drought-1020x610" width="1020" height="610"/>
+        <image name="cde179e8f7f048aabd9edde13ead2607" width="564" height="797"/>
         <image name="climate_first__2_-removebg-preview" width="500" height="500"/>
         <image name="climate_first__3_-removebg-preview" width="500" height="500"/>
         <image name="daplImage" width="1600" height="900"/>
